# graphql_fastapi_mongo

./: profile_stats.prof  pyproject.toml
docs/: graphql.md  graphql_different_resolvers.md  graphql_fastapi_comparison.md
src/backend/: fake_test.py  llm.ipynb  main.py  middlewares.py  performance_testing.py  populate_fake_data.py
src/backend/controllers/: generate_query.py  test_results.py
src/backend/core/: config.py
src/backend/db/: example_nodes.py  init_db.py
src/backend/graphql/: context.py  dataloader.py  mutations.py  queries.py  schema.py
src/backend/graphql/resolvers/: order.py  product.py  review.py  test.py  test_plan.py  test_result.py  user.py
src/backend/graphql/types/: common.py  filter.py  order.py  product.py  review.py  test.py  test_plan.py  test_result.py  user.py
src/backend/models/: common.py  llm_query_model.py  order.py  product.py  review.py  test.py  test_plan.py  test_result.py  user.py
src/backend/services/: generate_query.py
src/backend/utils/: logger.py  utils.py
